--- a/src/app/shared/layout/layout.component.scss
+++ b/src/app/shared/layout/layout.component.scss
@@ -3,23 +3,17 @@
 
 .layout {
   width: 100%;
+  // background-color: $background-color;
+  // height:calc(100vh - 64px);
 }
 
 .layout-sidebar {
-  height:calc(100vh - 64px);
-  margin-top: 64px;
+  // height:calc(100vh - 64px);
 
-  @media (max-width: $small) {
-    width: 218px;
-  }
 }
 
 .layout-content {
   //background-color: $background-color;
-  height:calc(100vh - 64px);
-  margin-top: 64px;
+  //height:calc(100vh - 64px);
 
-  @media (max-width: $small) {
-    width: 100%;
-  }
 }
