--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,6 +33,12 @@ $angular-dark-theme: mat.define-dark-theme(
 
 .darkMode {
   @include mat.all-component-colors($angular-dark-theme);
+
+
+}
+
+.darkModeBackground {
+  background-color: #515151;
 }
 
 /* You can add global styles to this file, and also import other style files */
